fix(menu-bar) adjust position on small screens

--- a/components/menu-bar/menu-bar.less
+++ b/components/menu-bar/menu-bar.less
@@ -69,8 +69,13 @@
 .menu-bar__contact {
 	position: fixed;
 	z-index: 6;
-	top: 34px;
-	right: 100px;
+	top: 24px;
+	right: 70px;
+
+	@media @screen-768 {
+		top: 34px;
+		right: 100px;
+	}
 }
 
 .menu-bar__contact-link {
